<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Master Password</string>
    <string name="remember">Remember</string>
    <string name="forgetOnClose">Forget on close</string>
    <string name="maskPassword">Hide password</string>
    <string name="fullName_hint">Your full name</string>
    <string name="masterPassword_hint">Your master password</string>
    <string name="siteName_hint">eg. google.com</string>
    <string name="sitePassword_hint">Tap to copy</string>
    <string name="resultType_hint">Type</string>
    <string name="siteCounter_hint">Counter</string>
    <string name="siteVersion_hint">Algorithm</string>
    <string name="empty" />
    <string name="btn_tests">Integrity Tests ❯</string>
    <string name="tests_unavailable">Test suite unavailable.</string>
    <string name="tests_btn_unavailable">Retest</string>
    <string name="tests_testing">Testing device\'s password generation integrity…</string>
    <string name="tests_btn_testing">Please Stand By…</string>
    <string name="tests_failed">Incompatible device or OS.</string>
    <string name="tests_btn_failed">Retest</string>
    <string name="tests_passed">Integrity checks passed!</string>
    <string name="tests_btn_passed">Close</string>
    <string name="nativeKDF">Use native key derivation</string>
</resources>
