<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center">

        <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:importantForAccessibility="no"
                android:src="@drawable/img_identity" />

        <EditText
                android:id="@+id/fullNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/masterPasswordField"
                android:inputType="text|textCapWords|textPersonName"
                android:hint="@string/fullName_hint"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        <CheckBox
                android:id="@+id/rememberFullNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/rememberPasswordField"
                android:textSize="12sp"
                android:textColor="@android:color/tertiary_text_dark"
                android:text="@string/remember" />

        <EditText
                android:id="@id/masterPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/siteNameField"
                android:inputType="text|textPassword"
                android:hint="@string/masterPassword_hint"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        <CheckBox
                android:id="@id/rememberPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/tertiary_text_dark"
                android:text="@string/forgetOnClose" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:importantForAccessibility="no"
                android:src="@drawable/img_key" />

        <EditText
                android:id="@id/siteNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/sitePasswordField"
                android:inputType="text|textNoSuggestions|textUri"
                android:hint="@string/siteName_hint"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ProgressBar
                    android:id="@+id/progressView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    tools:visibility="visible" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <Button
                        android:id="@id/sitePasswordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusForward="@+id/resultTypeButton"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:textColor="#FFFFFF"
                        android:textSize="28sp"
                        tools:text="LuxdZozvDuma4["
                        android:onClick="copySitePassword" />

                <TextView
                        android:id="@+id/sitePasswordTip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/sitePasswordField"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:textSize="12sp"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:text="@string/sitePassword_hint" />

            </LinearLayout>
        </FrameLayout>

        <CheckBox
                android:id="@+id/maskPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/tertiary_text_dark"
                android:text="@string/maskPassword" />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:importantForAccessibility="no"
                android:src="@drawable/divider" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:buttonBarStyle"
                android:orientation="horizontal"
                android:gravity="center">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                <Button
                        android:id="@id/resultTypeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        style="?android:buttonBarButtonStyle"
                        android:nextFocusForward="@+id/counterField"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/icon_key"
                        android:drawablePadding="8dp"
                        android:background="@android:color/transparent"
                        tools:text="Long" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/resultTypeButton"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:textSize="12sp"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:text="@string/resultType_hint" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                <Button
                        android:id="@id/counterField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        style="?android:buttonBarButtonStyle"
                        android:nextFocusForward="@+id/siteVersionButton"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/icon_plus"
                        android:drawablePadding="8dp"
                        android:background="@android:color/transparent"
                        tools:text="1" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/siteVersionButton"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:textSize="12sp"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:text="@string/siteCounter_hint" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                <Button
                        android:id="@id/siteVersionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        style="?android:buttonBarButtonStyle"
                        android:nextFocusForward="@+id/rememberFullNameField"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/icon_gears"
                        android:drawablePadding="8dp"
                        android:background="@android:color/transparent"
                        tools:text="3" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/siteVersionButton"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:textSize="12sp"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:text="@string/siteVersion_hint" />

            </LinearLayout>
        </LinearLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/btn_tests"
                android:onClick="integrityTests"
                android:background="@android:color/transparent" />

        <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

    </LinearLayout>

</ScrollView>
