<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center">

        <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/img_stats" />

        <ProgressBar
                android:id="@+id/progressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                tools:max="100"
                tools:progress="80"
                style="?android:progressBarStyleHorizontal" />

        <TextView
                android:id="@+id/statusView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/sitePasswordField"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:textSize="12sp"
                android:textColor="@android:color/tertiary_text_dark"
                android:text="@string/tests_testing" />

        <TextView
                android:id="@+id/logView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:background="@android:color/transparent"
                android:textIsSelectable="true"
                android:textSize="9sp"
                android:textColor="@android:color/tertiary_text_dark" />

        <Button
                android:id="@+id/actionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:text="@string/tests_btn_testing"
                android:onClick="onAction" />

        <CheckBox
                android:id="@+id/nativeKDFField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/tertiary_text_dark"
                android:text="@string/nativeKDF" />
    </LinearLayout>

</ScrollView>
